--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -13,7 +13,7 @@
       here is the about page. <br />
       <strong>This page has been put together by Yaroslav Kizyma</strong><br />
     </div>
-    <div><a href="/rango/">About</a><br /></div>
+    <div><a href="/rango/">Main Page</a><br /></div>
     <img src="{{ MEDIA_URL }}assignment_cat.jpg" alt="Picture of a Cat." />
   </body>
 </html>
