--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -13,17 +13,33 @@
       hey there partner! <br />
       <strong>{{ boldmessage }}</strong><br />
     </div>
+
     <div>
       {% if categories %}
+      <h2>Most Liked Categories</h2>
       <ul>
         {% for category in categories %}
-        <li>{{ category.name }}</li>
+        <li><a href="/rango/category/{{ category.slug }}">{{ category.name }}</a></li>
         {% endfor %}
       </ul>
       {% else %}
       <strong>There are no categories present.</strong>
       {% endif %}
     </div>
+    
+    <div>
+      {% if pages %}
+      <h2>Most Viewed Pages</h4>
+      <ul>
+        {% for page in pages %}
+        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+        {% endfor %}
+      </ul>
+      {% else %}
+      <strong>There are no pages present.</strong>
+      {% endif %}
+    </div>
+
     <div><a href="/rango/about/">About</a><br /></div>
     <img src="{% static 'images/rango.jpeg' %}" alt="Picture of Rango" />
   </body>
