--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -40,7 +40,10 @@
       {% endif %}
     </div>
 
-    <div><a href="/rango/about/">About</a><br /></div>
+    <div>
+      <a href="/rango/about/">About</a><br />
+      <a href="/rango/add_category/">Add a New Category</a><br />
+    </div>
     <img src="{% static 'images/rango.jpeg' %}" alt="Picture of Rango" />
   </body>
 </html>
